# aimmo_Post

./: .gitignore  Dockerfile  README.md  README.rst  aimmopost  aimmopost.yaml  pyproject.toml  requirements.txt
aimmoPost/: .gitignore  README.rst  app.py  models.py  pyproject.toml  requirements.txt
aimmoPost/Route/: __init__.py  user.py
aimmoPost/aimmoPost/: __init__.py  app.py
aimmoPost/aimmoPost/Route/: board.py  comment.py  mainpage.py  mypage.py  post.py  recomment.py  user.py
aimmoPost/aimmoPost/config/: default.py
aimmoPost/aimmoPost/models/: Board.py  Comment.py  Like.py  Post.py  ReComment.py  User.py
aimmoPost/app/: __init__.py  config.py  decorator.py  errors.py  models.py
aimmoPost/app/schemas/: BoardSchema.py  CommentSchema.py  PostSchema.py  ReCommentSchema.py  UserSchema.py  errors.py
aimmoPost/app/static/: swagger.json
aimmoPost/app/views/: __init__.py  board.py  comment.py  mainpage.py  mypage.py  post.py  recomment.py  user.py
aimmoPost/config/: __init__.py  default.py
aimmoPost/tests/: __init__.py  conftest.py  test_aimmopost.py  test_comment_add.py  test_comment_delete.py  test_comment_update.py  test_get_post_list.py  test_login.py  test_post_delete.py  test_post_detail.py  test_post_register.py  test_post_update.py
aimmoPost/tests/factory/: board_factory.py  comment_factory.py  post_factory.py  recomment_factory.py  user_factory.py
aimmoPost/tests/integration/: test_board_delete.py  test_board_list.py  test_board_regist.py  test_board_update.py  test_comment_delete.py  test_comment_like.py  test_comment_regist.py  test_comment_update.py  test_login.py  test_mainpage_comment.py  test_mainpage_like.py  test_mainpage_recent.py  test_mypage_comment.py  test_mypage_post.py  test_post_delete.py  test_post_detail.py  test_post_like.py  test_post_like_cancel.py  test_post_list.py  test_post_regist.py  test_post_search.py  test_post_update.py  test_recomment_delete.py  test_recomment_like.py  test_recomment_regist.py  test_recomment_update.py  test_signup.py
aimmoPost/tests/views/: conftest.py  test_board.py  test_comment.py  test_mainpage.py  test_mypage.py  test_post.py  test_recomment.py  test_user.py
app/: __init__.py  apidocs_utils.py  decorator.py  models.py
argo/: aimmopost-deployment.yaml
manifests/: deployment-1.yml  deployment.yml  service-1.yml  service.yml
(+44 files in other folders)
