[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fhzpdlqk <rozencrants@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-Classful = "^0.14.2"
marshmallow = "^3.17.0"
mongoengine = "^0.24.1"
python-dotenv = "^0.20.0"
pylint = "^2.14.3"
flask-mongoengine = "^1.0.0"
marshmallow-mongoengine = "^0.30.2"
Flask-Cors = "^3.0.10"
asyncio = "^3.4.3"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"
blinker = "^1.4"
mongomock = "^4.0.0"
factory-boy = "^3.2.1"
flask-restx = "^0.5.1"
flask-swagger = "^0.2.14"
pytest = "^7.1.2"
flask-apispec = "^0.11.1"
funcy = "^1.17"
apispec-webframeworks = "^0.5.2"
Flask-Classy = "^0.6.10"
flask-classful-apispec = "^0.1.8"
flask-swagger-ui = "^4.11.1"
marshmallow-enum = "^1.5.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-env = "^0.6.2"
pytest-flask = "^1.2.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-rerunfailures = "^10.2"
mongomock = "^4.1.2"
flask-shell-ipython = "^0.4.1"
pytest-factoryboy = "^2.5.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
