[tool.poetry]
name = "aimmoPost"
version = "0.1.0"
description = ""
authors = ["fhzpdlqk <rozencrants@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-Classful = "^0.14.2"
marshmallow = "^3.17.0"
mongoengine = "^0.24.1"
python-dotenv = "^0.20.0"
pylint = "^2.14.3"
flask-mongoengine = "^1.0.0"
marshmallow-mongoengine = "^0.30.2"
Flask-Cors = "^3.0.10"
asyncio = "^3.4.3"
bcrypt = "^3.2.2"
PyJWT = "^2.4.0"
blinker = "^1.4"
mongomock = "^4.0.0"
factory-boy = "^3.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
